--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@glimmer/tracking": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.6.0",
+    "date-fns": "^2.16.1",
+    "ember-auto-import": "^1.7.0",
     "ember-cli": "~3.21.2",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.22.1",
@@ -49,12 +50,19 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.4.0"
+    "qunit-dom": "^1.4.0",
+    "sass": "^1.29.0"
   },
   "engines": {
     "node": "10.* || >= 12"
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "alasql": "^0.6.4",
+    "bootstrap": "^4.5.3",
+    "csvtojson": "^2.0.10",
+    "skeleton-css": "^2.0.4"
   }
 }
